Got bitcoin data

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import requests"
+    "import requests\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3874,6 +3875,182 @@
     "response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
     "\n",
     "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/bitcoin-daily.csv', 'wb') as f:\n",
+    "    f.write(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-03-20</td>\n",
+       "      <td>42209.1767</td>\n",
+       "      <td>42309.9938</td>\n",
+       "      <td>40920.4713</td>\n",
+       "      <td>41266.4201</td>\n",
+       "      <td>38469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-03-19</td>\n",
+       "      <td>41764.4144</td>\n",
+       "      <td>42407.3007</td>\n",
+       "      <td>41504.8632</td>\n",
+       "      <td>42209.0166</td>\n",
+       "      <td>39308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-03-18</td>\n",
+       "      <td>40928.0314</td>\n",
+       "      <td>42348.2912</td>\n",
+       "      <td>40137.4168</td>\n",
+       "      <td>41764.1391</td>\n",
+       "      <td>52652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-03-17</td>\n",
+       "      <td>41119.5832</td>\n",
+       "      <td>41450.5255</td>\n",
+       "      <td>40509.1084</td>\n",
+       "      <td>40928.8143</td>\n",
+       "      <td>53008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-03-16</td>\n",
+       "      <td>39289.9865</td>\n",
+       "      <td>41567.9668</td>\n",
+       "      <td>38907.6865</td>\n",
+       "      <td>41120.4389</td>\n",
+       "      <td>80187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3829</th>\n",
+       "      <td>2011-08-23</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3830</th>\n",
+       "      <td>2011-08-22</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3831</th>\n",
+       "      <td>2011-08-21</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3832</th>\n",
+       "      <td>2011-08-20</td>\n",
+       "      <td>11.8500</td>\n",
+       "      <td>11.8500</td>\n",
+       "      <td>11.1500</td>\n",
+       "      <td>11.6900</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3833</th>\n",
+       "      <td>2011-08-19</td>\n",
+       "      <td>10.9000</td>\n",
+       "      <td>10.9000</td>\n",
+       "      <td>10.9000</td>\n",
+       "      <td>10.9000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3834 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       timestamp        open        high         low       close  volume\n",
+       "0     2022-03-20  42209.1767  42309.9938  40920.4713  41266.4201   38469\n",
+       "1     2022-03-19  41764.4144  42407.3007  41504.8632  42209.0166   39308\n",
+       "2     2022-03-18  40928.0314  42348.2912  40137.4168  41764.1391   52652\n",
+       "3     2022-03-17  41119.5832  41450.5255  40509.1084  40928.8143   53008\n",
+       "4     2022-03-16  39289.9865  41567.9668  38907.6865  41120.4389   80187\n",
+       "...          ...         ...         ...         ...         ...     ...\n",
+       "3829  2011-08-23     11.7000     11.7000     11.7000     11.7000       0\n",
+       "3830  2011-08-22     11.7000     11.7000     11.7000     11.7000       0\n",
+       "3831  2011-08-21     11.7000     11.7000     11.7000     11.7000       0\n",
+       "3832  2011-08-20     11.8500     11.8500     11.1500     11.6900       1\n",
+       "3833  2011-08-19     10.9000     10.9000     10.9000     10.9000       0\n",
+       "\n",
+       "[3834 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bitcoin_df = pd.read_csv('data/bitcoin-daily.csv')\n",
+    "bitcoin_df"
    ]
   }
  ],
