--- a/formula_try_out.ipynb
+++ b/formula_try_out.ipynb
@@ -2,37 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
-    "\n",
-    "import plot_function\n",
-    "import stock_function\n",
-    "\n",
     "# import modules to address environment variables\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
     "load_dotenv(find_dotenv())\n",
     "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
+    "\n",
+    "import api_function\n",
+    "import stock_function\n",
+    "import plot_function\n",
+    "\n",
     "\n",
     "import pandas_datareader as pdr\n",
+    "import pandas_datareader.data as web\n",
     "import datetime as dt\n",
     "from datetime import datetime\n",
-    "\n",
-    "import pandas_datareader.data as web\n",
-    "\n",
     "\n",
     "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +125,7 @@
        "2022-03-15  150.90  155.57  150.380  155.09   92964302"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +319,7 @@
        "[252 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +374,7 @@
        "0.2500626349151892"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +394,7 @@
        "Text(0.5, 1.0, 'AAPL volatility: 25.009999999999998%')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1572,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1665,7 @@
        "2022-03-15  280.35  287.82  278.725  287.15  34245085"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1843,7 @@
        "[252 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1864,7 @@
        "0.20940810512984667"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1885,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1897,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -3046,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3055,7 +3054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3064,7 +3063,7 @@
        "0.25007576053486047"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3076,7 +3075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3085,7 +3084,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3105,7 +3104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3113,7 @@
        "0.2500626349151892"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3126,7 +3125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -3158,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -3167,7 +3166,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3178,7 +3177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -3187,7 +3186,7 @@
        "0.6682564913158537"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3199,7 +3198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -3293,7 +3292,7 @@
        "2022-03-17  41119.5832  41450.5255  40509.1084  40928.8143   53008"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3305,7 +3304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3314,7 +3313,7 @@
        "0.6662024957612799"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3323,6 +3322,204 @@
     "df_bitcoin_v = calc_volatility(df_bitcoin, \"2021-01-01\", \"2021-12-31\", 252)\n",
     "df_bitcoin_v"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_df_stock_daily(symbol, start_date='2012-01-01', end_date='2021-12-31'):\n",
+    "    return web.DataReader(\n",
+    "        symbol,\n",
+    "        \"av-daily\",\n",
+    "        start=datetime.strptime(start_date, \"%Y-%m-%d\").date(),\n",
+    "        end=datetime.strptime(end_date, \"%Y-%m-%d\").date(),\n",
+    "        api_key=os.getenv(\"x-rapidapi-key\"),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2011-08-19</th>\n",
+       "      <td>10.9000</td>\n",
+       "      <td>10.9000</td>\n",
+       "      <td>10.9000</td>\n",
+       "      <td>10.9000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-08-20</th>\n",
+       "      <td>11.8500</td>\n",
+       "      <td>11.8500</td>\n",
+       "      <td>11.1500</td>\n",
+       "      <td>11.6900</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-08-21</th>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-08-22</th>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-08-23</th>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>11.7000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-27</th>\n",
+       "      <td>50786.1846</td>\n",
+       "      <td>52091.4642</td>\n",
+       "      <td>50460.6439</td>\n",
+       "      <td>50704.3271</td>\n",
+       "      <td>44366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-28</th>\n",
+       "      <td>50707.7016</td>\n",
+       "      <td>50709.3482</td>\n",
+       "      <td>47311.1945</td>\n",
+       "      <td>47544.8287</td>\n",
+       "      <td>63873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-29</th>\n",
+       "      <td>47544.1863</td>\n",
+       "      <td>48143.8484</td>\n",
+       "      <td>46138.0002</td>\n",
+       "      <td>46466.5142</td>\n",
+       "      <td>55828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-30</th>\n",
+       "      <td>46467.8409</td>\n",
+       "      <td>47912.7227</td>\n",
+       "      <td>45944.4800</td>\n",
+       "      <td>47123.4561</td>\n",
+       "      <td>57111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31</th>\n",
+       "      <td>47124.4369</td>\n",
+       "      <td>48565.9149</td>\n",
+       "      <td>45668.7580</td>\n",
+       "      <td>46213.7943</td>\n",
+       "      <td>53758</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3755 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  open        high         low       close  volume\n",
+       "2011-08-19     10.9000     10.9000     10.9000     10.9000       0\n",
+       "2011-08-20     11.8500     11.8500     11.1500     11.6900       1\n",
+       "2011-08-21     11.7000     11.7000     11.7000     11.7000       0\n",
+       "2011-08-22     11.7000     11.7000     11.7000     11.7000       0\n",
+       "2011-08-23     11.7000     11.7000     11.7000     11.7000       0\n",
+       "...                ...         ...         ...         ...     ...\n",
+       "2021-12-27  50786.1846  52091.4642  50460.6439  50704.3271   44366\n",
+       "2021-12-28  50707.7016  50709.3482  47311.1945  47544.8287   63873\n",
+       "2021-12-29  47544.1863  48143.8484  46138.0002  46466.5142   55828\n",
+       "2021-12-30  46467.8409  47912.7227  45944.4800  47123.4561   57111\n",
+       "2021-12-31  47124.4369  48565.9149  45668.7580  46213.7943   53758\n",
+       "\n",
+       "[3755 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_bit = api_function.get_df_stock_daily('BTCUSD')\n",
+    "alpha_bit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6662024957612798"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_bit_v = calc_volatility(alpha_bit, \"2021-01-01\", \"2021-12-31\", 252)\n",
+    "alpha_bit_v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
