--- a/playground.ipynb
+++ b/playground.ipynb
@@ -9,10 +9,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import math\n",
-    "import requests\n",
-    "import json\n",
-    "import script"
+    "import requests\n"
    ]
   },
   {
