--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2277,6 +2277,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Bar(\n",
+    "    x=months,\n",
+    "    y=[20, 14, 25, 16, 18, 22, 19, 15, 12, 16, 14, 17],\n",
+    "    name='Primary Product',\n",
+    "    marker_color='indianred'\n",
+    "))\n",
+    "fig.add_trace(go.Bar(\n",
+    "    x=months,\n",
+    "    y=[19, 14, 22, 14, 16, 19, 15, 14, 10, 12, 12, 16],\n",
+    "    name='Secondary Product',\n",
+    "    marker_color='lightsalmon'\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -16101,6 +16122,22 @@
    ],
    "source": [
     "revenue(df_tesla, '2021-03-10', '2021-03-18', 850)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(hist)"
    ]
   }
  ],
