Completed the collection of machine learning plots.

--- a/svr_price_prediction.ipynb
+++ b/svr_price_prediction.ipynb
@@ -334,9 +334,9 @@
        "      <td>47544.847656</td>\n",
        "      <td>46759.917969</td>\n",
        "      <td>47375.777344</td>\n",
-       "      <td>47273.554688</td>\n",
-       "      <td>32933564416</td>\n",
-       "      <td>47273.554688</td>\n",
+       "      <td>47317.886719</td>\n",
+       "      <td>32138979328</td>\n",
+       "      <td>47317.886719</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -374,7 +374,7 @@
        "2022-03-27  46827.546875  44437.292969  44505.355469  46820.492188   \n",
        "2022-03-28  48086.835938  46690.203125  46821.851562  47128.003906   \n",
        "2022-03-29  48022.289062  47100.437500  47100.437500  47465.730469   \n",
-       "2022-03-30  47544.847656  46759.917969  47375.777344  47273.554688   \n",
+       "2022-03-30  47544.847656  46759.917969  47375.777344  47317.886719   \n",
        "\n",
        "                 Volume     Adj Close  \n",
        "Date                                   \n",
@@ -407,7 +407,7 @@
        "2022-03-27  28160889722  46820.492188  \n",
        "2022-03-28  36362175703  47128.003906  \n",
        "2022-03-29  31397059069  47465.730469  \n",
-       "2022-03-30  32933564416  47273.554688  "
+       "2022-03-30  32138979328  47317.886719  "
       ]
      },
      "execution_count": 2,
@@ -474,9 +474,9 @@
        "      <td>47544.847656</td>\n",
        "      <td>46759.917969</td>\n",
        "      <td>47375.777344</td>\n",
-       "      <td>47273.554688</td>\n",
-       "      <td>32933564416</td>\n",
-       "      <td>47273.554688</td>\n",
+       "      <td>47317.886719</td>\n",
+       "      <td>32138979328</td>\n",
+       "      <td>47317.886719</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -485,11 +485,11 @@
       "text/plain": [
        "                    High           Low          Open         Close  \\\n",
        "Date                                                                 \n",
-       "2022-03-30  47544.847656  46759.917969  47375.777344  47273.554688   \n",
+       "2022-03-30  47544.847656  46759.917969  47375.777344  47317.886719   \n",
        "\n",
        "                 Volume     Adj Close  \n",
        "Date                                   \n",
-       "2022-03-30  32933564416  47273.554688  "
+       "2022-03-30  32138979328  47317.886719  "
       ]
      },
      "execution_count": 3,
@@ -1137,14 +1137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The actual price: 47273.5546875\n"
+      "The actual price: 47317.88671875\n"
      ]
     }
    ],
@@ -1155,14 +1155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The actual price: 47273.5546875\n"
+      "The actual price: 47317.88671875\n"
      ]
     }
    ],
@@ -1172,24 +1172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Date\n",
-       "2022-03-30    47273.554688\n",
-       "Name: Close, dtype: float64"
+       "47317.88671875"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "actual_price.Close"
+    "actual_price.Close[0]"
    ]
   }
  ],
