A small baby step for our stock trading

--- a/svr_price_prediction.ipynb
+++ b/svr_price_prediction.ipynb
@@ -20,6 +20,7 @@
     "import pandas_datareader as web\n",
     "import datetime as dt\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "plt.style.use(\"fivethirtyeight\")"
    ]
@@ -1108,7 +1109,8 @@
     "plt.ylabel('Close Price ($)')\n",
     "plt.title(f'{company} Price Prediction ({start} - {end})')\n",
     "plt.legend()\n",
-    "plt.savefig(f\"./plot/{company}_SVR_predicted.png\")"
+    "plt.show()\n",
+    "# plt.savefig(f\"./plot/{company}_SVR_predicted.png\")"
    ]
   },
   {
