--- a/formula_try_out.ipynb
+++ b/formula_try_out.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "2012-01-09  310.067780  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
           -0.005802052658744688,
           0.016936064735448005,
           0.0063374748771609585,
-          -0.00005152496268101881,
+          -5.152496268101881e-05,
           0.0026089933078136387,
           -0.011190937082120525,
           0.0038478761266562346,
@@ -705,7 +705,7 @@
           0.019552317630746177,
           -0.0017221828604052775,
           -0.0020907018858835596,
-          -0.00009392606666118559,
+          -9.392606666118559e-05,
           0.010988478966891474,
           -0.005032208909229739,
           -0.01935211247257785,
@@ -3137,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3694,196 +3694,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Adj Close</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2012-01-03</th>\n",
-       "      <td>14.732143</td>\n",
-       "      <td>14.607143</td>\n",
-       "      <td>14.621429</td>\n",
-       "      <td>14.686786</td>\n",
-       "      <td>302220800.0</td>\n",
-       "      <td>12.575918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-01-04</th>\n",
-       "      <td>14.810000</td>\n",
-       "      <td>14.617143</td>\n",
-       "      <td>14.642857</td>\n",
-       "      <td>14.765714</td>\n",
-       "      <td>260022000.0</td>\n",
-       "      <td>12.643503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-01-05</th>\n",
-       "      <td>14.948214</td>\n",
-       "      <td>14.738214</td>\n",
-       "      <td>14.819643</td>\n",
-       "      <td>14.929643</td>\n",
-       "      <td>271269600.0</td>\n",
-       "      <td>12.783867</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-01-06</th>\n",
-       "      <td>15.098214</td>\n",
-       "      <td>14.972143</td>\n",
-       "      <td>14.991786</td>\n",
-       "      <td>15.085714</td>\n",
-       "      <td>318292800.0</td>\n",
-       "      <td>12.917511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-01-09</th>\n",
-       "      <td>15.276786</td>\n",
-       "      <td>15.048214</td>\n",
-       "      <td>15.196429</td>\n",
-       "      <td>15.061786</td>\n",
-       "      <td>394024400.0</td>\n",
-       "      <td>12.897021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-27</th>\n",
-       "      <td>180.419998</td>\n",
-       "      <td>177.070007</td>\n",
-       "      <td>177.089996</td>\n",
-       "      <td>180.330002</td>\n",
-       "      <td>74919600.0</td>\n",
-       "      <td>180.100540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-28</th>\n",
-       "      <td>181.330002</td>\n",
-       "      <td>178.529999</td>\n",
-       "      <td>180.160004</td>\n",
-       "      <td>179.289993</td>\n",
-       "      <td>79144300.0</td>\n",
-       "      <td>179.061859</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-29</th>\n",
-       "      <td>180.630005</td>\n",
-       "      <td>178.139999</td>\n",
-       "      <td>179.330002</td>\n",
-       "      <td>179.380005</td>\n",
-       "      <td>62348900.0</td>\n",
-       "      <td>179.151749</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-30</th>\n",
-       "      <td>180.570007</td>\n",
-       "      <td>178.089996</td>\n",
-       "      <td>179.470001</td>\n",
-       "      <td>178.199997</td>\n",
-       "      <td>59773000.0</td>\n",
-       "      <td>177.973251</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-31</th>\n",
-       "      <td>179.229996</td>\n",
-       "      <td>177.259995</td>\n",
-       "      <td>178.089996</td>\n",
-       "      <td>177.570007</td>\n",
-       "      <td>64062300.0</td>\n",
-       "      <td>177.344055</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2517 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                  High         Low        Open       Close       Volume  \\\n",
-       "Date                                                                      \n",
-       "2012-01-03   14.732143   14.607143   14.621429   14.686786  302220800.0   \n",
-       "2012-01-04   14.810000   14.617143   14.642857   14.765714  260022000.0   \n",
-       "2012-01-05   14.948214   14.738214   14.819643   14.929643  271269600.0   \n",
-       "2012-01-06   15.098214   14.972143   14.991786   15.085714  318292800.0   \n",
-       "2012-01-09   15.276786   15.048214   15.196429   15.061786  394024400.0   \n",
-       "...                ...         ...         ...         ...          ...   \n",
-       "2021-12-27  180.419998  177.070007  177.089996  180.330002   74919600.0   \n",
-       "2021-12-28  181.330002  178.529999  180.160004  179.289993   79144300.0   \n",
-       "2021-12-29  180.630005  178.139999  179.330002  179.380005   62348900.0   \n",
-       "2021-12-30  180.570007  178.089996  179.470001  178.199997   59773000.0   \n",
-       "2021-12-31  179.229996  177.259995  178.089996  177.570007   64062300.0   \n",
-       "\n",
-       "             Adj Close  \n",
-       "Date                    \n",
-       "2012-01-03   12.575918  \n",
-       "2012-01-04   12.643503  \n",
-       "2012-01-05   12.783867  \n",
-       "2012-01-06   12.917511  \n",
-       "2012-01-09   12.897021  \n",
-       "...                ...  \n",
-       "2021-12-27  180.100540  \n",
-       "2021-12-28  179.061859  \n",
-       "2021-12-29  179.151749  \n",
-       "2021-12-30  177.973251  \n",
-       "2021-12-31  177.344055  \n",
-       "\n",
-       "[2517 rows x 6 columns]"
+       "DatetimeIndex(['2012-01-03', '2012-01-04', '2012-01-05', '2012-01-06',\n",
+       "               '2012-01-09', '2012-01-10', '2012-01-11', '2012-01-12',\n",
+       "               '2012-01-13', '2012-01-17',\n",
+       "               ...\n",
+       "               '2021-12-17', '2021-12-20', '2021-12-21', '2021-12-22',\n",
+       "               '2021-12-23', '2021-12-27', '2021-12-28', '2021-12-29',\n",
+       "               '2021-12-30', '2021-12-31'],\n",
+       "              dtype='datetime64[ns]', name='Date', length=2517, freq=None)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_aapl"
+    "df_aapl.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3892,7 +3730,7 @@
        "2.3860901883103436"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3907,7 +3745,7 @@
    "hash": "8b2a4ccb8e65f19440174776a42fe422935672eb46806908ee7044aabe35ab48"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('clustering_exercise')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3922,8 +3760,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
