Unifies the start and end dates for stock data retrieval

--- a/formula_try_out.ipynb
+++ b/formula_try_out.ipynb
@@ -650,7 +650,7 @@
           -0.005802052658744688,
           0.016936064735448005,
           0.0063374748771609585,
-          -5.152496268101881e-05,
+          -0.00005152496268101881,
           0.0026089933078136387,
           -0.011190937082120525,
           0.0038478761266562346,
@@ -705,7 +705,7 @@
           0.019552317630746177,
           -0.0017221828604052775,
           -0.0020907018858835596,
-          -9.392606666118559e-05,
+          -0.00009392606666118559,
           0.010988478966891474,
           -0.005032208909229739,
           -0.01935211247257785,
@@ -3336,8 +3336,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3348,12 +3353,12 @@
     "    df_goog,\n",
     "    df_msft,\n",
     "    df_tsla,\n",
-    ") = api_function.get_all_focused_stocks(start_date=\"2012-01-01\", end_date=\"2021-12-31\")\n"
+    ") = api_function.get_all_focused_stocks()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3396,49 +3401,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2014-09-17</th>\n",
-       "      <td>468.174011</td>\n",
-       "      <td>452.421997</td>\n",
-       "      <td>465.864014</td>\n",
-       "      <td>457.334015</td>\n",
-       "      <td>21056800</td>\n",
-       "      <td>457.334015</td>\n",
+       "      <th>2015-01-01</th>\n",
+       "      <td>320.434998</td>\n",
+       "      <td>314.002991</td>\n",
+       "      <td>320.434998</td>\n",
+       "      <td>314.248993</td>\n",
+       "      <td>8036550</td>\n",
+       "      <td>314.248993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-09-18</th>\n",
-       "      <td>456.859985</td>\n",
-       "      <td>413.104004</td>\n",
-       "      <td>456.859985</td>\n",
-       "      <td>424.440002</td>\n",
-       "      <td>34483200</td>\n",
-       "      <td>424.440002</td>\n",
+       "      <th>2015-01-02</th>\n",
+       "      <td>315.838989</td>\n",
+       "      <td>313.565002</td>\n",
+       "      <td>314.079010</td>\n",
+       "      <td>315.032013</td>\n",
+       "      <td>7860650</td>\n",
+       "      <td>315.032013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-09-19</th>\n",
-       "      <td>427.834991</td>\n",
-       "      <td>384.532013</td>\n",
-       "      <td>424.102997</td>\n",
-       "      <td>394.795990</td>\n",
-       "      <td>37919700</td>\n",
-       "      <td>394.795990</td>\n",
+       "      <th>2015-01-03</th>\n",
+       "      <td>315.149994</td>\n",
+       "      <td>281.082001</td>\n",
+       "      <td>314.846008</td>\n",
+       "      <td>281.082001</td>\n",
+       "      <td>33054400</td>\n",
+       "      <td>281.082001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-09-20</th>\n",
-       "      <td>423.295990</td>\n",
-       "      <td>389.882996</td>\n",
-       "      <td>394.673004</td>\n",
-       "      <td>408.903992</td>\n",
-       "      <td>36863600</td>\n",
-       "      <td>408.903992</td>\n",
+       "      <th>2015-01-04</th>\n",
+       "      <td>287.230011</td>\n",
+       "      <td>257.612000</td>\n",
+       "      <td>281.145996</td>\n",
+       "      <td>264.195007</td>\n",
+       "      <td>55629100</td>\n",
+       "      <td>264.195007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-09-21</th>\n",
-       "      <td>412.425995</td>\n",
-       "      <td>393.181000</td>\n",
-       "      <td>408.084991</td>\n",
-       "      <td>398.821014</td>\n",
-       "      <td>26580100</td>\n",
-       "      <td>398.821014</td>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>278.341003</td>\n",
+       "      <td>265.084015</td>\n",
+       "      <td>265.084015</td>\n",
+       "      <td>274.473999</td>\n",
+       "      <td>43962800</td>\n",
+       "      <td>274.473999</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3447,22 +3452,22 @@
       "text/plain": [
        "                  High         Low        Open       Close    Volume  \\\n",
        "Date                                                                   \n",
-       "2014-09-17  468.174011  452.421997  465.864014  457.334015  21056800   \n",
-       "2014-09-18  456.859985  413.104004  456.859985  424.440002  34483200   \n",
-       "2014-09-19  427.834991  384.532013  424.102997  394.795990  37919700   \n",
-       "2014-09-20  423.295990  389.882996  394.673004  408.903992  36863600   \n",
-       "2014-09-21  412.425995  393.181000  408.084991  398.821014  26580100   \n",
+       "2015-01-01  320.434998  314.002991  320.434998  314.248993   8036550   \n",
+       "2015-01-02  315.838989  313.565002  314.079010  315.032013   7860650   \n",
+       "2015-01-03  315.149994  281.082001  314.846008  281.082001  33054400   \n",
+       "2015-01-04  287.230011  257.612000  281.145996  264.195007  55629100   \n",
+       "2015-01-05  278.341003  265.084015  265.084015  274.473999  43962800   \n",
        "\n",
        "             Adj Close  \n",
        "Date                    \n",
-       "2014-09-17  457.334015  \n",
-       "2014-09-18  424.440002  \n",
-       "2014-09-19  394.795990  \n",
-       "2014-09-20  408.903992  \n",
-       "2014-09-21  398.821014  "
+       "2015-01-01  314.248993  \n",
+       "2015-01-02  315.032013  \n",
+       "2015-01-03  281.082001  \n",
+       "2015-01-04  264.195007  \n",
+       "2015-01-05  274.473999  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3473,15 +3478,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataframe contains stock prices between 2014-09-17 00:00:00 2022-01-01 00:00:00\n",
-      "Total days = 2663 days\n"
+      "Dataframe contains stock prices between 2015-01-01 00:00:00 2022-03-31 00:00:00\n",
+      "Total days = 2646 days\n"
      ]
     }
    ],
