Set the rules for further work

--- a/formula_try_out.ipynb
+++ b/formula_try_out.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,81 +63,81 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2012-01-03</th>\n",
-       "      <td>332.827484</td>\n",
-       "      <td>324.966949</td>\n",
-       "      <td>325.250885</td>\n",
-       "      <td>331.462585</td>\n",
-       "      <td>7380561.0</td>\n",
-       "      <td>331.462585</td>\n",
+       "      <th>2015-01-02</th>\n",
+       "      <td>529.815369</td>\n",
+       "      <td>522.665039</td>\n",
+       "      <td>527.561584</td>\n",
+       "      <td>523.373108</td>\n",
+       "      <td>1447563.0</td>\n",
+       "      <td>523.373108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2012-01-04</th>\n",
-       "      <td>333.873566</td>\n",
-       "      <td>329.076538</td>\n",
-       "      <td>331.273315</td>\n",
-       "      <td>332.892242</td>\n",
-       "      <td>5749470.0</td>\n",
-       "      <td>332.892242</td>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>522.894409</td>\n",
+       "      <td>511.655243</td>\n",
+       "      <td>521.827332</td>\n",
+       "      <td>512.463013</td>\n",
+       "      <td>2059840.0</td>\n",
+       "      <td>512.463013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2012-01-05</th>\n",
-       "      <td>330.745270</td>\n",
-       "      <td>326.889740</td>\n",
-       "      <td>329.828735</td>\n",
-       "      <td>328.274536</td>\n",
-       "      <td>6590410.0</td>\n",
-       "      <td>328.274536</td>\n",
+       "      <th>2015-01-06</th>\n",
+       "      <td>514.761719</td>\n",
+       "      <td>499.678131</td>\n",
+       "      <td>513.589966</td>\n",
+       "      <td>500.585632</td>\n",
+       "      <td>2899940.0</td>\n",
+       "      <td>500.585632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2012-01-06</th>\n",
-       "      <td>328.767700</td>\n",
-       "      <td>323.681763</td>\n",
-       "      <td>328.344299</td>\n",
-       "      <td>323.796326</td>\n",
-       "      <td>5405987.0</td>\n",
-       "      <td>323.796326</td>\n",
+       "      <th>2015-01-07</th>\n",
+       "      <td>505.855164</td>\n",
+       "      <td>498.281952</td>\n",
+       "      <td>505.611847</td>\n",
+       "      <td>499.727997</td>\n",
+       "      <td>2065054.0</td>\n",
+       "      <td>499.727997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2012-01-09</th>\n",
-       "      <td>322.291962</td>\n",
-       "      <td>309.455078</td>\n",
-       "      <td>322.042908</td>\n",
-       "      <td>310.067780</td>\n",
-       "      <td>11688849.0</td>\n",
-       "      <td>310.067780</td>\n",
+       "      <th>2015-01-08</th>\n",
+       "      <td>502.101471</td>\n",
+       "      <td>489.655640</td>\n",
+       "      <td>496.626526</td>\n",
+       "      <td>501.303680</td>\n",
+       "      <td>3353582.0</td>\n",
+       "      <td>501.303680</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  High         Low        Open       Close      Volume  \\\n",
-       "Date                                                                     \n",
-       "2012-01-03  332.827484  324.966949  325.250885  331.462585   7380561.0   \n",
-       "2012-01-04  333.873566  329.076538  331.273315  332.892242   5749470.0   \n",
-       "2012-01-05  330.745270  326.889740  329.828735  328.274536   6590410.0   \n",
-       "2012-01-06  328.767700  323.681763  328.344299  323.796326   5405987.0   \n",
-       "2012-01-09  322.291962  309.455078  322.042908  310.067780  11688849.0   \n",
+       "                  High         Low        Open       Close     Volume  \\\n",
+       "Date                                                                    \n",
+       "2015-01-02  529.815369  522.665039  527.561584  523.373108  1447563.0   \n",
+       "2015-01-05  522.894409  511.655243  521.827332  512.463013  2059840.0   \n",
+       "2015-01-06  514.761719  499.678131  513.589966  500.585632  2899940.0   \n",
+       "2015-01-07  505.855164  498.281952  505.611847  499.727997  2065054.0   \n",
+       "2015-01-08  502.101471  489.655640  496.626526  501.303680  3353582.0   \n",
        "\n",
        "             Adj Close  \n",
        "Date                    \n",
-       "2012-01-03  331.462585  \n",
-       "2012-01-04  332.892242  \n",
-       "2012-01-05  328.274536  \n",
-       "2012-01-06  323.796326  \n",
-       "2012-01-09  310.067780  "
+       "2015-01-02  523.373108  \n",
+       "2015-01-05  512.463013  \n",
+       "2015-01-06  500.585632  \n",
+       "2015-01-07  499.727997  \n",
+       "2015-01-08  501.303680  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "company = \"GOOG\"\n",
-    "start = dt.date(2012, 1, 1)\n",
-    "end = dt.date(2021, 12, 31)\n",
+    "start = dt.date(2015, 1, 1)\n",
+    "end = dt.date.today()\n",
     "\n",
     "df_apple = web.DataReader(company, \"yahoo\", start, end)\n",
     "df_apple.head()"
