--- a/on_balance_volume_indicator.ipynb
+++ b/on_balance_volume_indicator.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import pandas_datareader as web\n",
+    "import pandas_datareader.data as web\n",
     "import datetime as dt\n",
     "import stock_function as stock\n",
     "\n",
