--- a/some_plot_tests.ipynb
+++ b/some_plot_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,24 +75,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-04-01</th>\n",
-       "      <td>174.880005</td>\n",
-       "      <td>171.940002</td>\n",
-       "      <td>174.029999</td>\n",
-       "      <td>174.309998</td>\n",
-       "      <td>78699800.0</td>\n",
-       "      <td>174.309998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-04</th>\n",
-       "      <td>178.490005</td>\n",
-       "      <td>174.440002</td>\n",
-       "      <td>174.570007</td>\n",
-       "      <td>178.440002</td>\n",
-       "      <td>76468400.0</td>\n",
-       "      <td>178.440002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2022-04-05</th>\n",
        "      <td>178.300003</td>\n",
        "      <td>174.419998</td>\n",
@@ -116,8 +98,26 @@
        "      <td>169.850006</td>\n",
        "      <td>171.160004</td>\n",
        "      <td>172.139999</td>\n",
-       "      <td>77517700.0</td>\n",
+       "      <td>77594700.0</td>\n",
        "      <td>172.139999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-08</th>\n",
+       "      <td>171.779999</td>\n",
+       "      <td>169.199997</td>\n",
+       "      <td>171.779999</td>\n",
+       "      <td>170.089996</td>\n",
+       "      <td>76515900.0</td>\n",
+       "      <td>170.089996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-11</th>\n",
+       "      <td>169.029999</td>\n",
+       "      <td>165.500000</td>\n",
+       "      <td>168.710007</td>\n",
+       "      <td>165.750000</td>\n",
+       "      <td>72088900.0</td>\n",
+       "      <td>165.750000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -126,19 +126,19 @@
       "text/plain": [
        "                  High         Low        Open       Close      Volume  \\\n",
        "Date                                                                     \n",
-       "2022-04-01  174.880005  171.940002  174.029999  174.309998  78699800.0   \n",
-       "2022-04-04  178.490005  174.440002  174.570007  178.440002  76468400.0   \n",
        "2022-04-05  178.300003  174.419998  177.500000  175.059998  73401800.0   \n",
        "2022-04-06  173.630005  170.130005  172.360001  171.830002  89058800.0   \n",
-       "2022-04-07  173.360001  169.850006  171.160004  172.139999  77517700.0   \n",
+       "2022-04-07  173.360001  169.850006  171.160004  172.139999  77594700.0   \n",
+       "2022-04-08  171.779999  169.199997  171.779999  170.089996  76515900.0   \n",
+       "2022-04-11  169.029999  165.500000  168.710007  165.750000  72088900.0   \n",
        "\n",
        "             Adj Close  \n",
        "Date                    \n",
-       "2022-04-01  174.309998  \n",
-       "2022-04-04  178.440002  \n",
        "2022-04-05  175.059998  \n",
        "2022-04-06  171.830002  \n",
-       "2022-04-07  172.139999  "
+       "2022-04-07  172.139999  \n",
+       "2022-04-08  170.089996  \n",
+       "2022-04-11  165.750000  "
       ]
      },
      "execution_count": 3,
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4  Microsoft    0.271981"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -418,6 +418,7 @@
        ],
        "layout": {
         "barmode": "relative",
+        "height": 600,
         "legend": {
          "title": {
           "text": "Signal"
@@ -540,7 +541,10 @@
           }
          }
         },
-        "width": 1000,
+        "title": {
+         "text": "Overall Volatility"
+        },
+        "width": 800,
         "xaxis": {
          "anchor": "y",
          "categoryarray": [
@@ -579,7 +583,7 @@
    ],
    "source": [
     "fig = px.bar(vol_chart, x= 'signal', y = 'volatility', color='signal', labels={'signal':'Signal', 'volatility':'Volatility'}, width=1000)\n",
-    "\n",
+    "fig.update_layout(height=600, width=800, title_text=\"Overall Volatility\")\n",
     "fig.show()"
    ]
   },
